--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -6,111 +6,98 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:padding="16dp"
-    android:background="@drawable/gradient_bg">
+    android:background="@drawable/bckgrnd_pwrhme">
 
-    <!-- Bouton Retour -->
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/white"
-        android:textColor="@android:color/holo_blue_dark"
-        android:text="@string/retour"
+        android:backgroundTint="@color/silver"
+        android:textColor="@color/black"
+        android:text="@string/back"
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_marginTop="32dp"
         android:layout_gravity="start"/>
 
-    <!-- Titre Inscrivez-vous -->
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/inscrivez_vous"
-        android:textColor="@android:color/white"
+        android:text="@string/signup"
+        android:textColor="@color/silver"
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_marginTop="32dp"/>
 
-    <!-- Conteneur horizontal pour l'icône et l'EditText -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="16dp">
 
-        <!-- Image du user -->
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="50dp"
             android:layout_height="40dp"
             app:srcCompat="@drawable/person"
-            app:tint="@android:color/white"/>
+            app:tint="@color/silver"/>
 
-        <!-- Espacement de 32dp -->
         <Space
             android:layout_width="32dp"
             android:layout_height="1dp" />
 
-        <!-- EditText pour le nom -->
         <EditText
             android:id="@+id/editTextName"
             android:layout_width="276dp"
             android:layout_height="43dp"
             android:ems="10"
-            android:hint="@string/name"
+            android:hint="@string/firstname"
             android:inputType="text"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:backgroundTint="@android:color/white"/>
+            android:textColor="@color/silver"
+            android:textColorHint="@color/silver"
+            android:backgroundTint="@color/silver"/>
     </LinearLayout>
 
-    <!-- Conteneur horizontal pour l'icône et l'EditText -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="16dp">
 
-        <!-- Espacement de 32dp -->
         <Space
             android:layout_width="82dp"
             android:layout_height="1dp" />
 
-        <!-- EditText pour le nom -->
         <EditText
             android:id="@+id/editTextSurname"
             android:layout_width="276dp"
             android:layout_height="43dp"
             android:ems="10"
-            android:hint="@string/pr_nom"
+            android:hint="@string/name"
             android:inputType="text"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:backgroundTint="@android:color/white"/>
+            android:textColor="@color/silver"
+            android:textColorHint="@color/silver"
+            android:backgroundTint="@color/silver"/>
     </LinearLayout>
 
-    <!-- Conteneur horizontal pour l'icône et l'EditText -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="16dp">
 
-        <!-- Image du mail -->
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="50dp"
             android:layout_height="40dp"
             app:srcCompat="@drawable/baseline_mail_outline_24"
-            app:tint="@android:color/white"/>
+            app:tint="@color/silver"/>
 
-        <!-- Espacement de 32dp -->
         <Space
             android:layout_width="32dp"
             android:layout_height="1dp" />
 
-        <!-- EditText pour l'email -->
         <EditText
             android:id="@+id/editTextTextEmailAddress"
             android:layout_width="276dp"
@@ -118,65 +105,57 @@
             android:ems="10"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:backgroundTint="@android:color/white"/>
+            android:textColor="@color/silver"
+            android:textColorHint="@color/silver"
+            android:backgroundTint="@color/silver"/>
     </LinearLayout>
 
-    <!-- Conteneur horizontal pour l'icône et l'EditText -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="16dp">
 
-        <!-- Image du cadenas -->
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="50dp"
             android:layout_height="40dp"
             app:srcCompat="@drawable/lock"
-            app:tint="@android:color/white"/>
+            app:tint="@color/silver"/>
 
-        <!-- Espacement de 32dp -->
         <Space
             android:layout_width="32dp"
             android:layout_height="1dp" />
 
-        <!-- EditText pour le mot de passe -->
         <EditText
             android:id="@+id/editTextTextPassword"
             android:layout_width="276dp"
             android:layout_height="43dp"
             android:ems="10"
-            android:hint="@string/mot_de_passe"
+            android:hint="@string/pwd"
             android:inputType="textPassword"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:backgroundTint="@android:color/white"/>
+            android:textColor="@color/silver"
+            android:textColorHint="@color/silver"
+            android:backgroundTint="@color/silver"/>
     </LinearLayout>
 
-    <!-- Conteneur horizontal pour l'icône et l'EditText -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="16dp">
 
-        <!-- Image du téléphone -->
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="50dp"
             android:layout_height="40dp"
             app:srcCompat="@drawable/phone"
-            app:tint="@android:color/white"/>
+            app:tint="@color/silver"/>
 
-        <!-- Espacement de 32dp -->
         <Space
             android:layout_width="32dp"
             android:layout_height="1dp" />
 
-        <!-- Sélecteur de pays -->
         <Spinner
             android:id="@+id/spinnerCountryCode"
             android:layout_width="80dp"
@@ -185,42 +164,39 @@
             android:inputType="text"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:backgroundTint="@android:color/white"/>
+            android:textColor="@color/silver"
+            android:textColorHint="@color/silver"
+            android:backgroundTint="@color/silver"/>
 
-        <!-- EditText pour le mot de passe -->
         <EditText
             android:id="@+id/editTextPhone"
             android:layout_width="206dp"
             android:layout_height="43dp"
             android:ems="10"
-            android:hint="@string/t_l_phone"
+            android:hint="@string/phone"
             android:inputType="phone"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:backgroundTint="@android:color/white"/>
+            android:textColor="@color/silver"
+            android:textColorHint="@color/silver"
+            android:backgroundTint="@color/silver"/>
     </LinearLayout>
 
-    <!-- Bouton S'inscire' -->
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/white"
-        android:textColor="@android:color/holo_blue_dark"
+        android:backgroundTint="@color/silver"
+        android:textColor="@color/black"
         android:text="@string/login"
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_marginTop="32dp"/>
 
-    <!-- TextView pour la création de compte -->
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Déjà sur PowerHome ? Se connecter"
-        android:textColor="@android:color/white"
+        android:text="@string/already_on_pwrhme"
+        android:textColor="@color/silver"
         android:textStyle="bold"
         android:layout_marginTop="32dp"/>
 
