--- a/app/src/main/res/layout-land/activity_connexion.xml
+++ b/app/src/main/res/layout-land/activity_connexion.xml
@@ -6,7 +6,6 @@
     android:orientation="horizontal"
     android:padding="16dp">
 
-    <!-- Partie Connexion (Gauche) -->
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -14,29 +13,26 @@
         android:orientation="vertical"
         android:gravity="center_vertical">
 
-        <!-- Bouton Retour -->
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@android:color/holo_green_dark"
-            android:text="@string/retour"
+            android:text="@string/back"
             android:textSize="18sp"
             android:textStyle="bold"
             android:layout_gravity="start" />
 
-        <!-- Titre Identifiez-vous -->
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/identifiez_vous"
+            android:text="@string/id_yourself"
             android:textColor="@android:color/holo_green_dark"
             android:textSize="24sp"
             android:textStyle="bold"
             android:layout_marginTop="32dp" />
 
-        <!-- Conteneur Email -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -62,7 +58,6 @@
                 android:inputType="textEmailAddress" />
         </LinearLayout>
 
-        <!-- Conteneur Mot de Passe -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -84,28 +79,26 @@
                 android:layout_width="276dp"
                 android:layout_height="43dp"
                 android:ems="10"
-                android:hint="@string/mot_de_passe"
+                android:hint="@string/pwd"
                 android:inputType="textPassword" />
         </LinearLayout>
 
-        <!-- Mot de passe oublié -->
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/mot_de_passe_oubli"
+            android:text="@string/forgot_pwd"
             android:textColor="@android:color/holo_green_dark"
             android:textStyle="bold"
             android:layout_marginTop="16dp"
             android:layout_gravity="end"/>
 
-        <!-- Bouton Se connecter -->
         <Button
             android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@android:color/holo_green_dark"
-            android:text="@string/se_connecter"
+            android:text="@string/signin"
             android:textSize="18sp"
             android:textStyle="bold"
             android:layout_marginTop="32dp"
@@ -114,7 +107,6 @@
 
     </LinearLayout>
 
-    <!-- Partie Réseaux Sociaux (Droite) -->
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -123,7 +115,6 @@
         android:gravity="center"
         android:layout_marginStart="135dp">
 
-        <!-- Séparateur (Barre centrée) -->
         <View
             android:layout_width="2dp"
             android:layout_height="200dp"
@@ -131,12 +122,11 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="15dp"/>
 
-        <!-- Texte "OU" centré -->
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/ou"
+            android:text="@string/or"
             android:textColor="@android:color/holo_green_dark"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -145,7 +135,6 @@
             android:layout_marginTop="15dp"
             android:elevation="10dp"/>
 
-        <!-- Séparateur (Barre centrée) -->
         <View
             android:layout_width="2dp"
             android:layout_height="200dp"
@@ -154,7 +143,6 @@
             android:layout_marginStart="15dp"/>
     </LinearLayout>
 
-    <!-- Partie Réseaux Sociaux (Droite) -->
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -163,23 +151,20 @@
         android:gravity="center"
         android:layout_marginEnd="25dp">
 
-        <!-- Créer un compte -->
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/nouveau_sur_studio_ghibli_cr_er_un_compte"
+            android:text="@string/new_on_app"
             android:textColor="@android:color/holo_green_dark"
             android:textStyle="bold"
             android:layout_marginTop="32dp" />
 
-        <!-- Conteneur des icônes Facebook & Google -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <!-- Image de Facebook -->
             <ImageView
                 android:id="@+id/imageView6"
                 android:layout_width="wrap_content"
@@ -187,12 +172,6 @@
                 app:srcCompat="@mipmap/img_facebook_foreground"
                 android:layout_marginEnd="32dp"/>
 
-            <!-- Image de Google -->
-            <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@mipmap/img_google_foreground"/>
         </LinearLayout>
     </LinearLayout>
 
