--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -4,25 +4,22 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_bg">
+    android:background="@drawable/bckgrnd_pwrhme">
 
-    <!-- Conteneur principal -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!-- Barre d'outils (Toolbar) -->
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@android:color/black"
+            android:background="@color/black"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:title="Profil"
             app:navigationIcon="@drawable/menu" />
 
-        <!-- Contenu principal sous la Toolbar -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -30,85 +27,74 @@
             android:gravity="center_horizontal"
             android:padding="16dp">
 
-            <!-- Conteneur horizontal pour l'icône et l'EditText -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="16dp">
 
-                <!-- Image du user -->
                 <ImageView
                     android:id="@+id/imageView3"
                     android:layout_width="50dp"
                     android:layout_height="40dp"
                     app:srcCompat="@drawable/person"
-                    app:tint="@android:color/white"/>
+                    app:tint="@color/silver"/>
 
-                <!-- Espacement de 32dp -->
                 <Space
                     android:layout_width="32dp"
                     android:layout_height="1dp" />
 
-                <!-- EditText pour le nom -->
                 <EditText
                     android:id="@+id/editTextName"
                     android:layout_width="276dp"
                     android:layout_height="43dp"
                     android:ems="10"
-                    android:hint="@string/name"
+                    android:hint="@string/firstname"
                     android:inputType="text"
-                    android:textColor="@android:color/white"
-                    android:textColorHint="@android:color/white"
-                    android:backgroundTint="@android:color/white"/>
+                    android:textColor="@color/silver"
+                    android:textColorHint="@color/silver"
+                    android:backgroundTint="@color/silver"/>
             </LinearLayout>
 
-            <!-- Conteneur horizontal pour l'icône et l'EditText -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="16dp">
 
-                <!-- Espacement de 32dp -->
                 <Space
                     android:layout_width="82dp"
                     android:layout_height="1dp" />
 
-                <!-- EditText pour le nom -->
                 <EditText
                     android:id="@+id/editTextSurname"
                     android:layout_width="276dp"
                     android:layout_height="43dp"
                     android:ems="10"
-                    android:hint="@string/pr_nom"
+                    android:hint="@string/name"
                     android:inputType="text"
-                    android:textColor="@android:color/white"
-                    android:textColorHint="@android:color/white"
-                    android:backgroundTint="@android:color/white"/>
+                    android:textColor="@color/silver"
+                    android:textColorHint="@color/silver"
+                    android:backgroundTint="@color/silver"/>
             </LinearLayout>
 
-            <!-- Conteneur horizontal pour l'icône et l'EditText -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="16dp">
 
-                <!-- Image du mail -->
                 <ImageView
                     android:id="@+id/imageView"
                     android:layout_width="50dp"
                     android:layout_height="40dp"
                     app:srcCompat="@drawable/baseline_mail_outline_24"
-                    app:tint="@android:color/white"/>
+                    app:tint="@color/silver"/>
 
-                <!-- Espacement de 32dp -->
                 <Space
                     android:layout_width="32dp"
                     android:layout_height="1dp" />
 
-                <!-- EditText pour l'email -->
                 <EditText
                     android:id="@+id/editTextTextEmailAddress"
                     android:layout_width="276dp"
@@ -116,65 +102,57 @@
                     android:ems="10"
                     android:hint="@string/email"
                     android:inputType="textEmailAddress"
-                    android:textColor="@android:color/white"
-                    android:textColorHint="@android:color/white"
-                    android:backgroundTint="@android:color/white"/>
+                    android:textColor="@color/silver"
+                    android:textColorHint="@color/silver"
+                    android:backgroundTint="@color/silver"/>
             </LinearLayout>
 
-            <!-- Conteneur horizontal pour l'icône et l'EditText -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="16dp">
 
-                <!-- Image du cadenas -->
                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="50dp"
                     android:layout_height="40dp"
                     app:srcCompat="@drawable/lock"
-                    app:tint="@android:color/white"/>
+                    app:tint="@color/silver"/>
 
-                <!-- Espacement de 32dp -->
                 <Space
                     android:layout_width="32dp"
                     android:layout_height="1dp" />
 
-                <!-- EditText pour le mot de passe -->
                 <EditText
                     android:id="@+id/editTextTextPassword"
                     android:layout_width="276dp"
                     android:layout_height="43dp"
                     android:ems="10"
-                    android:hint="@string/mot_de_passe"
+                    android:hint="@string/pwd"
                     android:inputType="textPassword"
-                    android:textColor="@android:color/white"
-                    android:textColorHint="@android:color/white"
-                    android:backgroundTint="@android:color/white"/>
+                    android:textColor="@color/silver"
+                    android:textColorHint="@color/silver"
+                    android:backgroundTint="@color/silver"/>
             </LinearLayout>
 
-            <!-- Conteneur horizontal pour l'icône et l'EditText -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="16dp">
 
-                <!-- Image du téléphone -->
                 <ImageView
                     android:id="@+id/imageView4"
                     android:layout_width="50dp"
                     android:layout_height="40dp"
                     app:srcCompat="@drawable/phone"
-                    app:tint="@android:color/white"/>
+                    app:tint="@color/silver"/>
 
-                <!-- Espacement de 32dp -->
                 <Space
                     android:layout_width="32dp"
                     android:layout_height="1dp" />
 
-                <!-- Sélecteur de pays -->
                 <Spinner
                     android:id="@+id/spinnerCountryCode"
                     android:layout_width="80dp"
@@ -183,38 +161,35 @@
                     android:inputType="text"
                     android:paddingStart="8dp"
                     android:paddingEnd="8dp"
-                    android:textColor="@android:color/white"
-                    android:textColorHint="@android:color/white"
-                    android:backgroundTint="@android:color/white"/>
+                    android:textColor="@color/silver"
+                    android:textColorHint="@color/silver"
+                    android:backgroundTint="@color/silver"/>
 
-                <!-- EditText pour le mot de passe -->
                 <EditText
                     android:id="@+id/editTextPhone"
                     android:layout_width="206dp"
                     android:layout_height="43dp"
                     android:ems="10"
-                    android:hint="@string/t_l_phone"
+                    android:hint="@string/phone"
                     android:inputType="phone"
-                    android:textColor="@android:color/white"
-                    android:textColorHint="@android:color/white"
-                    android:backgroundTint="@android:color/white"/>
+                    android:textColor="@color/silver"
+                    android:textColorHint="@color/silver"
+                    android:backgroundTint="@color/silver"/>
             </LinearLayout>
 
-            <!-- Bouton Modifier' -->
             <Button
                 android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@android:color/white"
-                android:textColor="@android:color/holo_blue_dark"
-                android:text="Enregistrer les modifications"
+                android:backgroundTint="@color/silver"
+                android:textColor="@color/black"
+                android:text="@string/save_edits"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_marginTop="32dp"/>
         </LinearLayout>
     </LinearLayout>
 
-    <!-- Menu NavigationView -->
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
@@ -222,5 +197,5 @@
         android:layout_gravity="start"
         app:menu="@menu/drawer_menu"
         app:headerLayout="@layout/nav_header"
-        android:background="@android:color/white"/>
+        android:background="@color/silver"/>
 </androidx.drawerlayout.widget.DrawerLayout>
