--- a/app/src/main/res/layout/activity_reservation.xml
+++ b/app/src/main/res/layout/activity_reservation.xml
@@ -4,25 +4,22 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_bg">
+    android:background="@drawable/bckgrnd_pwrhme">
 
-    <!-- Conteneur principal -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!-- Barre d'outils (Toolbar) -->
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@android:color/black"
+            android:background="@color/black"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:title="Réservations"
             app:navigationIcon="@drawable/menu" />
 
-        <!-- Contenu principal sous la Toolbar -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -35,13 +32,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="*"
-                android:background="@android:color/white"
+                android:background="@color/silver"
                 android:padding="8dp"/>
 
         </LinearLayout>
     </LinearLayout>
 
-    <!-- Menu NavigationView -->
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
@@ -49,5 +45,5 @@
         android:layout_gravity="start"
         app:menu="@menu/drawer_menu"
         app:headerLayout="@layout/nav_header"
-        android:background="@android:color/white"/>
+        android:background="@color/silver"/>
 </androidx.drawerlayout.widget.DrawerLayout>
