--- a/app/src/main/res/layout/activity_connexion.xml
+++ b/app/src/main/res/layout/activity_connexion.xml
@@ -122,6 +122,7 @@
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         android:elevation="2dp"
+        android:onClick="gotoinscription"
         android:padding="8dp"/>
 
 </LinearLayout>
