--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -198,6 +198,7 @@
         android:text="@string/already_on_pwrhme"
         android:textColor="@color/silver"
         android:textStyle="bold"
+        android:onClick="gotoconnexion"
         android:layout_marginTop="32dp"/>
 
 </LinearLayout>
